# centaur

./: .dockerignore  .gitignore  AGENTS.md  Justfile  Makefile  README.md  centaur-0.1.38.tgz  docker-compose.yml  index.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml  e2e-amp.yml  publish-images.yml
apps/slackbot/: package.json  pnpm-lock.yaml
apps/usage/: app.js  data.json  index.html  serve.py  style.css
apps/venue-scout/: Dockerfile  (+3 more)
centaur_sdk/: __init__.py  pyproject.toml
docs/: .gitignore  TASKS.md  legal_policy_v1.json  package.json  sidebar.ts  vocs.config.ts  wrangler.jsonc  wrangler.local.jsonc
monitoring/: nginx.conf
sandbox/: Dockerfile  SYSTEM_PROMPT.md  SYSTEM_PROMPT_INVEST.md  SYSTEM_PROMPT_LEGAL.md  call.sh  entrypoint.sh  slack-upload.sh
scripts/: auth-bootstrap.js  build_self_improve_notifier_input.py  deploy-fresh.sh  deploy-notify.sh  legal_eval_runner.py  verify_test_investmemos.py  write_test_investmemos.py
tests/: docker-compose.auth-pentest.yml  test_agent_thread_sync.py  test_auth_pentest.py  test_harness_events.py  test_thread_ui_stream.py
tools/: README.md
tools-paradigm/slack_deepsearch/: __init__.py  client.py  pyproject.toml
tools/infra/research_cache/: client.py  pyproject.toml
workflows/: company_context_documents.py  daily_checklist_digest.py  investment_pipeline_weekly.py  morning_market_brief.py  policy_news_monitor.py  self_improve_daily.py  self_improve_deploy_notifier.py  slack_backfill.py  slack_sync.py  slack_sync_shared.py  usage_stats.py
(+344 files in other folders)
