[project]
name = "slack-deepsearch"
description = "Parallel Slack query fan-out with ranking and dedupe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ai-v2]
module = "client.py"
hosts = ["slack.com"]
secrets = ["SLACK_BOT_TOKEN"]

