[project]
name = "research_cache"
description = "Cache for TLDR briefs and research outputs. Stores results keyed by company identifier with a 24h TTL. Use get() before running expensive research, put() after generating results."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[tool.ai-v2]
module = "client.py"
